--- a/style.css
+++ b/style.css
@@ -17,6 +17,8 @@
 max-width:var(--larguramaxima);
 min-width: var(--larguraminima);
 margin: auto;
+display: flex;
+flex-direction: column;
 padding:5px;
 position: relative;
 top: 40px;
@@ -25,6 +27,7 @@ top: 40px;
   #sociais{
     width: 250px;
     display: flex;
+    position: absolute;
     right: 25px;
     left: 20px;
     top: 15px;
@@ -41,25 +44,25 @@ top: 40px;
   }
 
   #capa{
-    height: 300px;
-    width: 100%;
-   background-image: url('images/bg-fantasia.jpg');
+    height: 250px;
+    width: 1000px;
+   background-image: url('images/bg-floral.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: 15px 15px;
     display: flex;
-    background-position: 0px 0px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border-radius: 10px; /*borda da foto  arredondada*/
+    border-radius: 5px; /*borda da foto  arredondada*/
   }
 
   #fotodeperfil{
-    width:100px;
-    left: 215px;
-    top:115px;
+    width:50px;
+    right: 25px;
+    top:0px;
     position: absolute;
-    border-radius: 5px;
+    border-radius: 40px;
   }
 
 #capa h1{
@@ -78,8 +81,8 @@ nav{
 }
 
 #menu{
-width: 250px;
-right: 100px;
+width: 100px;
+right: 50px;
 display: flex;
 justify-content: space-between;
 
@@ -93,7 +96,7 @@ justify-content: space-between;
 }
 
 span{
-  color: rgb(5, 5, 5);
+  color: rgb(225, 0, 255);
 }
 .colunas{
   column-count: 3;
