--- a/style.css
+++ b/style.css
@@ -16,37 +16,38 @@
   header, main, footer{
 max-width:var(--larguramaxima);
 min-width: var(--larguraminima);
-margin: auto;
 display: flex;
 flex-direction: column;
+margin: auto;
 padding:5px;
 position: relative;
-top: 40px;
+top:40px;
   }
 
   #sociais{
-    width: 250px;
+    width:40px;
     display: flex;
+    justify-content: center;
     position: absolute;
-    right: 25px;
-    left: 20px;
+    right: 20px;
     top: 15px;
   }
 
   .social{
     width: 30px;
     filter: invert(1) opacity(0.7);
+    background-color: rgb(0, 255, 0);
   }
   .social:hover{
-    width: 60px;
+    width: 30px;
   filter: invert(1) opacity(1);
   
   }
 
   #capa{
     height: 250px;
-    width: 1000px;
-   background-image: url('images/bg-floral.jpg');
+    width: 100%;
+   background-image: url('images/bg-abstrato.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 15px 15px;
@@ -58,19 +59,19 @@ top: 40px;
   }
 
   #fotodeperfil{
-    width:50px;
-    right: 25px;
-    top:0px;
+    width:40px;
+    left: 20px;
+    top:10px;
     position: absolute;
     border-radius: 40px;
   }
 
 #capa h1{
-  color: rgb(0, 255, 255);
+  color: rgb(243, 3, 163);
 }
 
 #capa p{
-  color: rgb(9, 160, 197);
+  color: rgb(221, 7, 157);
 }
 
 /*-----------------BOTÔES DO MENU----------------------*/
@@ -85,6 +86,7 @@ width: 100px;
 right: 50px;
 display: flex;
 justify-content: space-between;
+
 
 }
 
