--- a/style.css
+++ b/style.css
@@ -36,18 +36,21 @@ top:40px;
   .social{
     width: 30px;
     filter: invert(1) opacity(0.7);
+
     
   }
   .social:hover{
     width: 30px;
   filter: invert(1) opacity(1);
+  transition: opacity 1s ease-out ;
+  color: black;
   
   }
 
   #capa{
     height: 250px;
     width: 100%;
-   background-image: url('images/bg-abstrato.jpg');
+   background-image: url('images/bg-natureza.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 15px 15px;
@@ -67,11 +70,11 @@ top:40px;
   }
 
 #capa h1{
-  color: rgb(2, 196, 255);
+  color: rgb(27, 228, 0);
 }
 
 #capa p{
-  color: rgba(9, 163, 235, 0.678);
+  color: rgb(0, 0, 0);
 }
 
 /*-----------------BOTÔES DO MENU----------------------*/
@@ -98,7 +101,7 @@ justify-content: space-between;
 }
 
 span{
-  color: rgb(4, 0, 255);
+  color: rgb(0, 245, 33);
 }
 .colunas{
   column-count: 3;
@@ -113,8 +116,8 @@ iframe{
 
 .Filmes{
   width:50%;
-  background-color: firebrick;
-  border:15px solid black;
+  background-color: rgb(167, 12, 12);
+  border:15px solid rgb(0, 0, 0);
   border-radius: 20px;
   text-align: justify;
   padding: 5px;
